--- a/force-app/main/default/classes/LeaveRequestApproveHandler.cls
+++ b/force-app/main/default/classes/LeaveRequestApproveHandler.cls
@@ -48,6 +48,7 @@ public without sharing class LeaveRequestApproveHandler {
                                                        WHERE Id =:leaveRequestId]) {
             //Approver 1
             if (LeaveRequestConstant.LOGGEDIN_USERID == leaveReqStatus.EMS_LM_Approver__c) {
+                System.debug('### APP 1');
             	leaveReqStatus.EMS_LM_Status__c = String.isNotBlank(leaveReqStatus.EMS_LM_2nd_Approver__c) ? LeaveRequestConstant.APPROVER_3_WAITING : LeaveRequestConstant.APPROVED;
             	leaveReqStatus.Approver_1_Approved_Comments__c = comments;
                 leaveReqStatus.EMS_LM_Current_Approver__c = String.isNotBlank(leaveReqStatus.EMS_LM_2nd_Approver__c) ? leaveReqStatus.EMS_LM_2nd_Approver__r.LastName + ' ' +  leaveReqStatus.EMS_LM_2nd_Approver__r.FirstName : leaveReqStatus.EMS_LM_Approver__r.LastName + ' ' + leaveReqStatus.EMS_LM_Approver__r.FirstName;
@@ -57,7 +58,8 @@ public without sharing class LeaveRequestApproveHandler {
             	updatedLeaveReqList.add(leaveReqStatus); 
             }
             //Approver 2
-            else if (LeaveRequestConstant.LOGGEDIN_USERID == leaveReqStatus.EMS_LM_2nd_Approver__c ) {
+            else if (LeaveRequestConstant.LOGGEDIN_USERID == leaveReqStatus.EMS_LM_2nd_Approver__c && leaveReqStatus.EMS_LM_Status__c != LeaveRequestConstant.APPROVER_2_WAITING ) {
+                System.debug('### APP 2');
                 leaveReqStatus.EMS_LM_Status__c = String.isNotBlank(leaveReqStatus.Approver_3__c) ? LeaveRequestConstant.APPROVER_4_WAITING: LeaveRequestConstant.APPROVED;
                 leaveReqStatus.Approver_2_Approved_Comments__c = comments;
                 leaveReqStatus.EMS_LM_Current_Approver__c = String.isNotBlank(leaveReqStatus.Approver_3__c) ? leaveReqStatus.Approver_3__r.LastName + leaveReqStatus.Approver_3__r.FirstName : leaveReqStatus.EMS_LM_2nd_Approver__r.LastName + ' ' +  leaveReqStatus.EMS_LM_2nd_Approver__r.FirstName ;
@@ -68,6 +70,7 @@ public without sharing class LeaveRequestApproveHandler {
             }
             //Approver 3
             else if (LeaveRequestConstant.LOGGEDIN_USERID == leaveReqStatus.Approver_3__c) {
+                System.debug('### APP 3');
                 leaveReqStatus.EMS_LM_Status__c = LeaveRequestConstant.APPROVED;
                 leaveReqStatus.Approver_3_Approved_Comments__c = comments;
                 leaveReqStatus.EMS_LM_Current_Approver__c = String.isNotBlank(leaveReqStatus.Approver_3__c) ? leaveReqStatus.Approver_3__r.LastName + leaveReqStatus.Approver_3__r.FirstName : NUll;
@@ -101,12 +104,20 @@ public without sharing class LeaveRequestApproveHandler {
         List<EMS_LM_Leave_History__c> bulkupdatedLeaveReqList = new List<EMS_LM_Leave_History__c>();        
         for (EMS_LM_Leave_History__c bulkleaveReqApproval : [SELECT Id,
                                                                     EMS_LM_Status__c,
-                                                                    Approver_1_Approved_Comments__c,
-                                                                    Approver_2_Approved_Comments__c,
-                                                                    Approver_3_Approved_Comments__c,
-                                                                    EMS_LM_Approver__c,
+                                                             		Approver_1_Approved_Comments__c,
+                                                            		Approver_2_Approved_Comments__c,
+                                                             		Approver_3_Approved_Comments__c,
+                                                             	    EMS_LM_Approver__c,
+                                                       		        EMS_LM_Approver__r.LastName,
+                                                       	            EMS_LM_Approver__r.FirstName,
                                                                     EMS_LM_2nd_Approver__c,
-                                                                    Approver_3__c
+                                                       		        EMS_LM_2nd_Approver__r.LastName,
+                                                       	            EMS_LM_2nd_Approver__r.FirstName,
+                                                       		        EMS_LM_Current_Approver__c,
+                                                                    Approver_3__c,
+                                                                    Approver_3__r.LastName,
+                                                                    Approver_3__r.FirstName,
+                                                       	            EMS_LM_Approved_On__c
                                                              FROM EMS_LM_Leave_History__c
                                                              WHERE Id =:bulkleaveReqId]) {
            System.debug('### bulkleaveReqApproval');
@@ -121,7 +132,7 @@ public without sharing class LeaveRequestApproveHandler {
             	bulkupdatedLeaveReqList.add(bulkleaveReqApproval); 
             }
             //Approver 2
-            else if (LeaveRequestConstant.LOGGEDIN_USERID == bulkleaveReqApproval.EMS_LM_2nd_Approver__c ) {
+            else if (LeaveRequestConstant.LOGGEDIN_USERID == bulkleaveReqApproval.EMS_LM_2nd_Approver__c && bulkleaveReqApproval.EMS_LM_Status__c != LeaveRequestConstant.APPROVER_2_WAITING) {
                 bulkleaveReqApproval.EMS_LM_Status__c = String.isNotBlank(bulkleaveReqApproval.Approver_3__c) ? LeaveRequestConstant.APPROVER_4_WAITING: LeaveRequestConstant.APPROVED;
                 bulkleaveReqApproval.Approver_2_Approved_Comments__c = comments;
                 bulkleaveReqApproval.EMS_LM_Current_Approver__c = String.isNotBlank(bulkleaveReqApproval.Approver_3__c) ? bulkleaveReqApproval.Approver_3__r.LastName + bulkleaveReqApproval.Approver_3__r.FirstName : bulkleaveReqApproval.EMS_LM_2nd_Approver__r.LastName + ' ' +  bulkleaveReqApproval.EMS_LM_2nd_Approver__r.FirstName ;
