--- a/force-app/main/default/classes/ContactConstant.cls
+++ b/force-app/main/default/classes/ContactConstant.cls
@@ -1,4 +1,4 @@
 public class ContactConstant {
 public static final Id RESOURCE_RECORDTYPEID = Schema.SObjectType.Contact.getRecordTypeInfosByDeveloperName().get('Resource').getRecordTypeId();
-
+public static final Id APPLICANT_RECORDTYPEID = Schema.SObjectType.Contact.getRecordTypeInfosByDeveloperName().get('Applicant').getRecordTypeId();
 }
