--- a/force-app/main/default/classes/CP_SendOnboardingFormMail.cls
+++ b/force-app/main/default/classes/CP_SendOnboardingFormMail.cls
@@ -66,16 +66,29 @@ public class CP_SendOnboardingFormMail implements TriggerAction.AfterInsert,Trig
                     //applicantRec.EMS_EM_Personal_Email__c = contactRec.Email;
                     applicantRec.EMS_EM_Personal_Email__c = contactRec.Personal_Email__c;
                     applicantRec.Date_of_Joining__c = contactRec.EMS_EM_JD__c;
+                    applicantRec.ContactId1__c = contactRec.Id;
+                    applicantRec.Status__c = 'Triggered';
                     applicantsList.add(applicantRec);
+                    
+                    
                     String status = sendOnboardingEmail(contactRec.Personal_Email__c,contactRec.Id); 
                     if(status == 'success'){
                         sendEmailToHR(contactRec.Id);
                         sendEmailToTA(contactRec.Id);
+                        sendEmailToAdminTeam(contactRec.Id);
                     }
                 }
             }   
         }
         insert applicantsList;
+        List<ems_EM_Additional_Detail__c> additionalDetailsList = new List<ems_EM_Additional_Detail__c>();
+        for(EMS_EM_Onboarding_Request__c onboardingRecords : applicantsList){
+            ems_EM_Additional_Detail__c applicantRec = new ems_EM_Additional_Detail__c();
+            applicantRec.Onboarding_Request__c = onboardingRecords.id;
+            applicantRec.ContactId__c = onboardingRecords.ContactId1__c;
+            additionalDetailsList.add(applicantRec);
+        }
+        insert additionalDetailsList;
     }
     
     public static String sendOnboardingEmail(String email,string recordId){
@@ -102,7 +115,11 @@ public class CP_SendOnboardingFormMail implements TriggerAction.AfterInsert,Trig
         List<Messaging.SingleEmailMessage> mails =  new List<Messaging.SingleEmailMessage>(); 
         EmailTemplate emailTemplate =[Select Id,Subject,Description,HtmlValue,DeveloperName,Body from EmailTemplate
                                       where name ='Notify To Hr After Onboarding Form Sent' LIMIT 1];
-        String hrTeamEmail = [SELECT id, email FROM Contact WHERE name = 'HR Team'].email;
+       /* String hrTeamEmail = [SELECT id, email FROM Contact WHERE name = 'HR Team'].email;
+        List<String> hrEmailList = new List<String>();
+        hrEmailList.add(hrTeamEmail);*/
+        
+        String hrTeamEmail = [SELECT id, DeveloperName, Email__c from Employee_Details__mdt WHERE DeveloperName = 'HR_Team'].Email__c;
         List<String> hrEmailList = new List<String>();
         hrEmailList.add(hrTeamEmail);
         
@@ -119,12 +136,35 @@ public class CP_SendOnboardingFormMail implements TriggerAction.AfterInsert,Trig
         List<Messaging.SingleEmailMessage> mails =  new List<Messaging.SingleEmailMessage>(); 
         EmailTemplate emailTemplate =[Select Id,Subject,Description,HtmlValue,DeveloperName,Body from EmailTemplate
                                       where name ='Notify TA After Onboarding Form Sent' LIMIT 1];
-        String taTeamEmail = [SELECT id, email FROM Contact WHERE name = 'TA Team'].email;
+        /*String taTeamEmail = [SELECT id, email FROM Contact WHERE name = 'TA Team'].email;
+        List<String> taEmailList = new List<String>();
+        taEmailList.add(taTeamEmail);*/
+        String taTeamEmail = [SELECT id, DeveloperName, Email__c from Employee_Details__mdt WHERE DeveloperName = 'TA_Team'].Email__c;
         List<String> taEmailList = new List<String>();
         taEmailList.add(taTeamEmail);
         
         Messaging.SingleEmailMessage message = new Messaging.SingleEmailMessage();
         message.toAddresses = taEmailList;
+        message.setTemplateID(emailTemplate.Id);
+        message.setTargetObjectId(recordId);
+        message.setTreatTargetObjectAsRecipient(false);
+         message.setSaveAsActivity(false);
+        Messaging.sendEmail(new Messaging.SingleEmailMessage[] { message });
+    }
+    public static void sendEmailToAdminTeam(string recordId){
+        List<Messaging.SingleEmailMessage> mails =  new List<Messaging.SingleEmailMessage>(); 
+        EmailTemplate emailTemplate =[Select Id,Subject,Description,HtmlValue,DeveloperName,Body from EmailTemplate
+                                      where name ='After Applicant Record Inserted Admin' LIMIT 1];
+        /*String adminTeamEmail = [SELECT id, email FROM Contact WHERE name = 'Admin Team'].email;
+        List<String> adminEmailList = new List<String>();
+        adminEmailList.add(adminTeamEmail);*/
+        
+        String taTeamEmail = [SELECT id, DeveloperName, Email__c from Employee_Details__mdt WHERE DeveloperName = 'Admin_Team'].Email__c;
+        List<String> adminEmailList = new List<String>();
+        adminEmailList.add(taTeamEmail);
+        
+        Messaging.SingleEmailMessage message = new Messaging.SingleEmailMessage();
+        message.toAddresses = adminEmailList;
         message.setTemplateID(emailTemplate.Id);
         message.setTargetObjectId(recordId);
         message.setTreatTargetObjectAsRecipient(false);
